--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,23 @@
             <version>${spring.security.version}</version>
         </dependency>
 
+        <!--Apache POI-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>ooxml-schemas</artifactId>
+            <version>1.1</version>
+        </dependency>
+
         <!-- connect to mysql -->
         <dependency>
             <groupId>mysql</groupId>
