Configured ResourceHandlers to serve CSS, bootstrap resources, added Action classes to handle multiaction queries, i18n

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -2,3 +2,5 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/placeholder
 jdbc.username=placeholder
 jdbc.password=1234
+upload.location = D:\\tmp2\\upload\\
+formed.document.location = D:\\tmp2\\formed documents\\
