--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
             <version>5.1.38</version>
         </dependency>
 
+        <!-- For user input validation -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
+
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
